--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <encoding>UTF-8</encoding>
-    <scala.tools.version>2.11</scala.tools.version>
-    <scala.version>2.11.8</scala.version>
+    <scala.tools.version>2.10</scala.tools.version>
+    <scala.version>2.10.6</scala.version>
   </properties>
 
   <dependencies>
@@ -60,7 +60,18 @@
           <artifactId>mahout-math</artifactId>
           <version>0.13.0</version>
       </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.apache.mahout</groupId>-->
+      <!--<artifactId>mahout-math-scala_2.10</artifactId>-->
+      <!--<version>0.13.0</version>-->
+    <!--</dependency>-->
+    <dependency>
+      <groupId>org.scalanlp</groupId>
+      <artifactId>breeze_2.10</artifactId> <!-- or 2.11 -->
+      <version>0.13.1</version>
+    </dependency>
   </dependencies>
+
 
   <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
@@ -70,7 +81,7 @@
         <!-- see http://davidb.github.com/scala-maven-plugin -->
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.1.3</version>
+        <version>3.2.2</version>
         <executions>
           <execution>
             <goals>
