--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
       <artifactId>breeze_2.10</artifactId> <!-- or 2.11 -->
       <version>0.13.1</version>
     </dependency>
+      <dependency>
+          <groupId>org.scalanlp</groupId>
+          <artifactId>breeze-viz_2.10</artifactId> <!-- or 2.11 -->
+          <version>0.13.1</version>
+      </dependency>
   </dependencies>
 
 
